--- a/options/finetune_realesrgan_x4plus.yml
+++ b/options/finetune_realesrgan_x4plus.yml
@@ -4,6 +4,7 @@ model_type: RealESRGANModel
 scale: 4
 num_gpu: auto
 manual_seed: 0
+compile: True
 
 # ----------------- options for synthesizing training data in RealESRGANModel ----------------- #
 # USM the ground-truth
