--- a/options/finetune_realesrgan_x4plus.yml
+++ b/options/finetune_realesrgan_x4plus.yml
@@ -4,7 +4,7 @@ model_type: RealESRGANModel
 scale: 4
 num_gpu: auto
 manual_seed: 0
-compile: True
+compile: false
 
 # ----------------- options for synthesizing training data in RealESRGANModel ----------------- #
 # USM the ground-truth
@@ -74,13 +74,13 @@ datasets:
     prefetch_mode: ~
 
   # Uncomment these for validation
-  # val:
-  #   name: validation
-  #   type: PairedImageDataset
-  #   dataroot_gt: path_to_gt
-  #   dataroot_lq: path_to_lq
-  #   io_backend:
-  #     type: disk
+  val:
+    name: val_eqr
+    type: SingleImageDataset
+ #   dataroot_gt: path_to_gt
+    dataroot_lq: datasets/val_eqr
+    io_backend:
+      type: disk
 
 # network structures
 network_g:
