--- a/options/finetune_realesrgan_x4plus.yml
+++ b/options/finetune_realesrgan_x4plus.yml
@@ -11,8 +11,7 @@ l1_gt_usm: True
 percep_gt_usm: True
 gan_gt_usm: False
 
-crop_pad_size: 450
-kernel_range: [7, 9, 11, 13, 15, 17]
+
 # the first degradation process
 resize_prob: [0.2, 0.7, 0.1]  # up, down, keep
 resize_range: [0.15, 1.5]
@@ -48,6 +47,10 @@ datasets:
     io_backend:
       type: disk
 
+    #divisible by scale
+    crop_pad_size: 450
+    #all odd
+    kernel_range: [7, 9, 11, 13, 15, 17]
     blur_kernel_size: 21
     kernel_list: ['iso', 'aniso', 'generalized_iso', 'generalized_aniso', 'plateau_iso', 'plateau_aniso']
     kernel_prob: [0.45, 0.25, 0.12, 0.03, 0.12, 0.03]
