--- a/options/finetune_realesrgan_x4plus.yml
+++ b/options/finetune_realesrgan_x4plus.yml
@@ -33,6 +33,7 @@ poisson_scale_range2: [0.05, 2.5]
 gray_noise_prob2: 0.4
 jpeg_compress2: false
 jpeg_range2: [30, 95]
+sinc_prob: 0
 
 gt_size: 256
 queue_size: 180
